# Process_Mining

./: .gitignore  Deviation_anal.ipynb  README.md
conformance_checking/: DecisionTree_Ranking.ipynb  Synthetic.ipynb  main.ipynb  param_grid.json  pyproject.toml  ranked_rules_gini.txt  ranked_rules_tt.txt  requirements.txt
conformance_checking/Notebooks_application/: synthetic_data_funcs.ipynb
conformance_checking/conformance_checking/: Ranking.ipynb  Ranking.py  Synthetic.py  __init__.py  alignment.py  decision_tree_data.csv  test.py  xes_to_csv.py
conformance_checking/data/: alignments.pkl  df_for_decision_tree.csv  df_with_tau_for_decision_tree.csv
conformance_checking/ranked_rules/: ranked_rules_gini.txt  ranked_rules_gini_rules_synthetic.txt  ranked_rules_synthetic.txt  ranked_rules_tt.txt
conformance_checking/tests/: decision_tree_data.csv
